--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,10 +1,3 @@
-/Action.class
-/Cell.class
-/CellType.class
 /Control.class
-/GOTNode.class
-/GenericSearchProblem.class
-/Node.class
-/Operator.class
-/Orientation.class
-/SaveWesteros.class
+/GOT/
+/Generic/
